feat: Enhance Session Management and Memory Retrieval
- Added methods to SessionManagerService for checking session staleness, refreshing stale sessions, and compacting sessions.
- Integrated memory extraction and retrieval during session refresh and compaction processes.
- Updated QdrantMemoryRepository with new methods for retrieving user and server memories, including combined memory retrieval.
- Modified tests to accommodate new session management features and memory services.
- Removed ConversationMemory entity from the database schema and added PreferredModel column to ServerMeta.

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,11 @@
 # Copy this file to .env and customize the values for your environment
 
 # ======================
-# Bot Configuration
+# Discord Configuration
 # ======================
-AMQ_Bot__Token=your-discord-bot-token-here
+AMQ_Discord__Token=your-discord-bot-token-here
+AMQ_Discord__ActivityMessage=Chatting with AI
+# AMQ_Discord__CommandsGuildId=your-test-guild-id  # Optional: Set for faster command registration during dev
 
 # ======================
 # LLM (AI Language Model) Configuration
@@ -36,24 +38,40 @@ AMQ_LLM__Providers__OpenAI__Models__gpt-4o-mini__Name=GPT-4 Omni Mini
 AMQ_LLM__Providers__OpenAI__Models__gpt-4o-mini__MaxTokens=128000
 AMQ_LLM__Providers__OpenAI__Models__gpt-4o-mini__MaxOutputTokens=16384
 
-# Grok Provider Configuration (Optional)
-AMQ_LLM__Providers__Grok__Enabled=false
+# Grok Provider Configuration (xAI)
+AMQ_LLM__Providers__Grok__Enabled=true
 AMQ_LLM__Providers__Grok__ApiKey=xai-your-grok-api-key-here
 AMQ_LLM__Providers__Grok__BaseUrl=https://api.x.ai/v1/
 AMQ_LLM__Providers__Grok__DefaultModel=grok-3
 
-# Grok Model Configurations
-AMQ_LLM__Providers__Grok__Models__grok-3__Name=Grok 3 Latest Stable
+# Grok Model Configurations (2025)
+# Grok 4 - Most intelligent model with tool use and 256K context
+AMQ_LLM__Providers__Grok__Models__grok-4__Name=Grok 4 (Latest)
+AMQ_LLM__Providers__Grok__Models__grok-4__MaxTokens=256000
+AMQ_LLM__Providers__Grok__Models__grok-4__MaxOutputTokens=16384
+
+# Grok 4.1 Fast - Optimized for agentic tool calling with 2M context
+AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-reasoning__Name=Grok 4.1 Fast Reasoning
+AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-reasoning__MaxTokens=2000000
+AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-reasoning__MaxOutputTokens=16384
+
+AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-non-reasoning__Name=Grok 4.1 Fast Non-Reasoning
+AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-non-reasoning__MaxTokens=2000000
+AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-non-reasoning__MaxOutputTokens=16384
+
+# Grok 3 - Stable workhorse with 131K context
+AMQ_LLM__Providers__Grok__Models__grok-3__Name=Grok 3 (Stable)
 AMQ_LLM__Providers__Grok__Models__grok-3__MaxTokens=131072
 AMQ_LLM__Providers__Grok__Models__grok-3__MaxOutputTokens=8192
 
-AMQ_LLM__Providers__Grok__Models__grok-3-mini__Name=Grok 3 Mini
+AMQ_LLM__Providers__Grok__Models__grok-3-mini__Name=Grok 3 Mini (Fast)
 AMQ_LLM__Providers__Grok__Models__grok-3-mini__MaxTokens=131072
 AMQ_LLM__Providers__Grok__Models__grok-3-mini__MaxOutputTokens=4096
 
-AMQ_LLM__Providers__Grok__Models__grok-4-0709__Name=Grok 4 Advanced Reasoning
-AMQ_LLM__Providers__Grok__Models__grok-4-0709__MaxTokens=131072
-AMQ_LLM__Providers__Grok__Models__grok-4-0709__MaxOutputTokens=8192
+# Grok Code - Optimized for agentic coding with 256K context
+AMQ_LLM__Providers__Grok__Models__grok-code-fast-1__Name=Grok Code Fast
+AMQ_LLM__Providers__Grok__Models__grok-code-fast-1__MaxTokens=256000
+AMQ_LLM__Providers__Grok__Models__grok-code-fast-1__MaxOutputTokens=16384
 
 # Gemini Provider Configuration (Optional)
 AMQ_LLM__Providers__Gemini__Enabled=false
