--- a/source/Amiquin.Core/Amiquin.Core.csproj
+++ b/source/Amiquin.Core/Amiquin.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.18.0-nightly.20250728.601" />
+    <PackageReference Include="Discord.Net" Version="3.18.0" />
     <PackageReference Include="Jiro.Shared" Version="1.4.4">
       <ExcludeAssets>contentFiles</ExcludeAssets>
     </PackageReference>
