Upgrade project to .NET 10.0 and update package references to version 10.0.1 across all projects. Added GlobalToggles table to MySQL and SQLite migrations, including necessary model updates. Enhanced ActivitySessionService and related tests to incorporate new sleep service and initiative options. Refactored SimpleChatServiceTests and other service tests to align with updated configurations and dependencies. Removed obsolete PersonaServiceTests file.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@
 # Development local files and ideas
 dev-local/
 
+# Root Data folder (runtime data, logs, sessions)
+/Data/
+
+# SQLite database files
+*.db
+*.sqlite
+
 # DocFX generated documentation
 generated/
 dev/api/*
