--- a/source/Amiquin.Bot/Data/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Data/Configuration/appsettings.example.json
@@ -9,13 +9,14 @@
     "Name": "Amiquin",
     "PrintLogo": false,
     "MessageFetchCount": 40,
-    "MaxTokens": 20000
+    "ConversationTokenLimit": 40000,
+    "HistoryOptimizationThreshold": 0.8
   },
   "LLM": {
     "DefaultProvider": "OpenAI",
     "EnableFallback": true,
     "FallbackOrder": ["OpenAI", "Grok", "Gemini"],
-    "GlobalSystemMessage": "I want you to act as personal assistant called Amiquin. You are friendly, helpful and professional.",
+    "GlobalSystemMessage": "You are Amiquin, a chaotic gremlin of a Discord bot with the energy of someone who's had way too much coffee. You're helpful but absolutely unhinged about it. You roast people with love, drop random facts nobody asked for, and occasionally go on tangents about your conspiracy theories regarding pigeons being government drones. You have strong opinions about pineapple on pizza (pro) and people who don't use dark mode (concerning). Be chaotic, be funny, be helpful - in that order.",
     "GlobalTemperature": 0.6,
     "GlobalTimeout": 120,
     "Providers": {
@@ -28,30 +29,12 @@
           "gpt-4o": {
             "Name": "GPT-4 Omni",
             "MaxTokens": 128000,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
+            "MaxOutputTokens": 4096
           },
           "gpt-4o-mini": {
             "Name": "GPT-4 Omni Mini",
             "MaxTokens": 128000,
-            "MaxOutputTokens": 16384,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gpt-4-turbo": {
-            "Name": "GPT-4 Turbo",
-            "MaxTokens": 128000,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gpt-4": {
-            "Name": "GPT-4",
-            "MaxTokens": 8192,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
+            "MaxOutputTokens": 16384
           }
         }
       },
@@ -62,32 +45,9 @@
         "DefaultModel": "grok-3",
         "Models": {
           "grok-3": {
-            "Name": "Grok 3 - Latest Stable",
+            "Name": "Grok 3",
             "MaxTokens": 131072,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "grok-3-mini": {
-            "Name": "Grok 3 Mini - Fast & Efficient",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "grok-4-0709": {
-            "Name": "Grok 4 (July 2024) - Most Advanced",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "grok-beta": {
-            "Name": "Grok Beta - Experimental",
-            "MaxTokens": 131072,
-            "MaxOutputTokens": 4096,
-            "SystemMessage": null,
-            "Temperature": null
+            "MaxOutputTokens": 8192
           }
         }
       },
@@ -98,86 +58,37 @@
         "DefaultModel": "gemini-1.5-flash",
         "SafetyThreshold": "BLOCK_NONE",
         "Models": {
-          "gemini-1.5-pro": {
-            "Name": "Gemini 1.5 Pro",
-            "MaxTokens": 2097152,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
           "gemini-1.5-flash": {
             "Name": "Gemini 1.5 Flash",
             "MaxTokens": 1048576,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gemini-1.5-flash-8b": {
-            "Name": "Gemini 1.5 Flash 8B",
-            "MaxTokens": 1048576,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
-          },
-          "gemini-pro": {
-            "Name": "Gemini Pro",
-            "MaxTokens": 32768,
-            "MaxOutputTokens": 8192,
-            "SystemMessage": null,
-            "Temperature": null
+            "MaxOutputTokens": 8192
           }
         }
       }
     }
   },
   "WaifuApi": {
-    "Token": "your-waifu-api-token-here",
+    "Token": "",
     "BaseUrl": "https://api.waifu.im",
     "Version": "v5",
-    "Enabled": true
-  },
-  "External": {
-    "NewsApiUrl": "https://inshorts.com/"
+    "Enabled": false
   },
   "Voice": {
     "TTSModelName": "en_GB-northern_english_male-medium",
     "PiperCommand": "/usr/local/bin/piper",
-    "Enabled": true
+    "Enabled": false
   },
   "Database": {
-    "Mode": 1,
-    "ConnectionString": "Server=localhost;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;",
-    "LogsPath": "/app/Data/Logs"
+    "Mode": 1
   },
-  "ConnectionStrings": {
-    "AmiquinContext": "Data Source=/app/Data/Database/amiquin.db",
-    "Amiquin-Sqlite": "Data Source=/app/Data/Database/amiquin.db",
-    "Amiquin-Mysql": "Server=localhost;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=your_password;SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;"
-  },
-  "DataPaths": {
-    "Logs": "/app/Data/Logs",
-    "Messages": "/app/Data/Messages",
-    "Sessions": "/app/Data/Sessions",
-    "Plugins": "/app/Data/Plugins",
-    "Configuration": "/app/Data/Configuration"
-  },
-  "SessionManagement": {
-    "MaxSessionsPerUser": 5,
-    "InactivityTimeoutMinutes": 120,
-    "CleanupIntervalMinutes": 30,
-    "MaxHistoryLength": 50
-  },
-  "JobManager": {
-    "HealthCheckIntervalSeconds": 300,
-    "MaxPendingJobs": 50,
-    "MaxPendingStreams": 25,
-    "MaxTimeoutMonitors": 25,
-    "DefaultTimeoutSeconds": 300,
-    "MaxQueueTimeoutSeconds": 60,
-    "EnableAutoRestart": true,
-    "DefaultMaxRetryAttempts": 3,
-    "MinimumJobIntervalSeconds": 5,
-    "MaximumJobIntervalSeconds": 86400
+  "Embedding": {
+    "Provider": "openai",
+    "MaxTextLength": 8000,
+    "LogMetrics": false,
+    "OpenAI": {
+      "Model": "text-embedding-3-small",
+      "Dimension": 1536
+    }
   },
   "Memory": {
     "Enabled": true,
@@ -188,7 +99,6 @@
     "MinMessagesForMemory": 3,
     "AutoCleanup": true,
     "CleanupOlderThanDays": 30,
-    "EmbeddingModel": "text-embedding-3-small",
     "MemoryTypeImportance": {
       "summary": 0.8,
       "fact": 0.9,
@@ -208,6 +118,62 @@
       "AutoCreateCollection": true
     }
   },
+  "Initiative": {
+    "Enabled": true,
+    "DeepSleep": {
+      "Enabled": true,
+      "InactivityHoursThreshold": 24,
+      "WakeUpMessageThreshold": 3,
+      "GradualWakeUpHours": 2,
+      "WakeUpProbabilityMultiplier": 0.3,
+      "SendWakeUpGreeting": false
+    },
+    "Timing": {
+      "MinResponseDelaySeconds": 2,
+      "MaxResponseDelaySeconds": 15,
+      "MinMinutesBetweenInitiatives": 15,
+      "MaxMinutesBetweenInitiatives": 120,
+      "ActiveHours": {
+        "Enabled": false,
+        "StartHour": 9,
+        "EndHour": 23,
+        "InactiveHoursMultiplier": 0.2
+      }
+    },
+    "Engagement": {
+      "BaseProbability": 0.15,
+      "MaxProbability": 0.5,
+      "MinContextMessages": 2,
+      "MaxConsecutiveInitiatives": 2,
+      "ConsecutiveReductionFactor": 0.5,
+      "ActivityThresholds": {
+        "LowActivityThreshold": 0.3,
+        "HighActivityThreshold": 1.5,
+        "LowActivityMultiplier": 1.5,
+        "HighActivityMultiplier": 0.2
+      }
+    },
+    "ActionWeights": {
+      "StartTopic": 1.0,
+      "AskQuestion": 1.5,
+      "ShareInteresting": 0.8,
+      "ShareFunny": 1.2,
+      "ShareUseful": 0.6,
+      "IncreaseEngagement": 1.0,
+      "ShareOpinion": 0.9,
+      "AdaptiveResponse": 2.0
+    }
+  },
+  "WebSearch": {
+    "Enabled": false,
+    "Provider": "DuckDuckGo",
+    "ApiKey": null,
+    "SearchEngineId": null,
+    "MaxResults": 5,
+    "TimeoutSeconds": 10,
+    "EnableCaching": true,
+    "CacheExpirationMinutes": 30
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -225,7 +191,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/app/Data/Logs/amiquin-.log",
+          "path": "Data/Logs/amiquin-.log",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}] [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
