--- a/.env.example
+++ b/.env.example
@@ -1,212 +1,60 @@
-# Amiquin Environment Configuration Example
-# This file shows all available configuration options using AMQ_ prefix
-# Copy this file to .env and customize the values for your environment
+# ======================
+# Amiquin Environment Configuration
+# ======================
+# Copy this file to .env and configure the required values.
+# All settings use sensible defaults - only override what you need.
 
 # ======================
-# Discord Configuration
+# REQUIRED - Discord Configuration
 # ======================
 AMQ_Discord__Token=your-discord-bot-token-here
-AMQ_Discord__ActivityMessage=Chatting with AI
-# AMQ_Discord__CommandsGuildId=your-test-guild-id  # Optional: Set for faster command registration during dev
 
 # ======================
-# LLM (AI Language Model) Configuration
+# REQUIRED - LLM Provider (at least one)
 # ======================
-
-# Global LLM Settings
-AMQ_LLM__DefaultProvider=OpenAI
-AMQ_LLM__EnableFallback=true
-AMQ_LLM__FallbackOrder__0=OpenAI
-AMQ_LLM__FallbackOrder__1=Grok
-AMQ_LLM__FallbackOrder__2=Gemini
-AMQ_LLM__GlobalSystemMessage=I want you to act as personal assistant called Amiquin. You are friendly, helpful and professional.
-AMQ_LLM__GlobalTemperature=0.6
-AMQ_LLM__GlobalTimeout=120
-
-# OpenAI Provider Configuration
-AMQ_LLM__Providers__OpenAI__Enabled=true
+# OpenAI (recommended)
 AMQ_LLM__Providers__OpenAI__ApiKey=sk-your-openai-api-key-here
-AMQ_LLM__Providers__OpenAI__BaseUrl=https://api.openai.com/v1/
-AMQ_LLM__Providers__OpenAI__DefaultModel=gpt-4o-mini
 
-# OpenAI Model Configurations
-AMQ_LLM__Providers__OpenAI__Models__gpt-4o__Name=GPT-4 Omni
-AMQ_LLM__Providers__OpenAI__Models__gpt-4o__MaxTokens=128000
-AMQ_LLM__Providers__OpenAI__Models__gpt-4o__MaxOutputTokens=4096
+# Grok (xAI) - optional alternative
+# AMQ_LLM__Providers__Grok__ApiKey=xai-your-grok-api-key-here
 
-AMQ_LLM__Providers__OpenAI__Models__gpt-4o-mini__Name=GPT-4 Omni Mini
-AMQ_LLM__Providers__OpenAI__Models__gpt-4o-mini__MaxTokens=128000
-AMQ_LLM__Providers__OpenAI__Models__gpt-4o-mini__MaxOutputTokens=16384
-
-# Grok Provider Configuration (xAI)
-AMQ_LLM__Providers__Grok__Enabled=true
-AMQ_LLM__Providers__Grok__ApiKey=xai-your-grok-api-key-here
-AMQ_LLM__Providers__Grok__BaseUrl=https://api.x.ai/v1/
-AMQ_LLM__Providers__Grok__DefaultModel=grok-3
-
-# Grok Model Configurations (2025)
-# Grok 4 - Most intelligent model with tool use and 256K context
-AMQ_LLM__Providers__Grok__Models__grok-4__Name=Grok 4 (Latest)
-AMQ_LLM__Providers__Grok__Models__grok-4__MaxTokens=256000
-AMQ_LLM__Providers__Grok__Models__grok-4__MaxOutputTokens=16384
-
-# Grok 4.1 Fast - Optimized for agentic tool calling with 2M context
-AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-reasoning__Name=Grok 4.1 Fast Reasoning
-AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-reasoning__MaxTokens=2000000
-AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-reasoning__MaxOutputTokens=16384
-
-AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-non-reasoning__Name=Grok 4.1 Fast Non-Reasoning
-AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-non-reasoning__MaxTokens=2000000
-AMQ_LLM__Providers__Grok__Models__grok-4-1-fast-non-reasoning__MaxOutputTokens=16384
-
-# Grok 3 - Stable workhorse with 131K context
-AMQ_LLM__Providers__Grok__Models__grok-3__Name=Grok 3 (Stable)
-AMQ_LLM__Providers__Grok__Models__grok-3__MaxTokens=131072
-AMQ_LLM__Providers__Grok__Models__grok-3__MaxOutputTokens=8192
-
-AMQ_LLM__Providers__Grok__Models__grok-3-mini__Name=Grok 3 Mini (Fast)
-AMQ_LLM__Providers__Grok__Models__grok-3-mini__MaxTokens=131072
-AMQ_LLM__Providers__Grok__Models__grok-3-mini__MaxOutputTokens=4096
-
-# Grok Code - Optimized for agentic coding with 256K context
-AMQ_LLM__Providers__Grok__Models__grok-code-fast-1__Name=Grok Code Fast
-AMQ_LLM__Providers__Grok__Models__grok-code-fast-1__MaxTokens=256000
-AMQ_LLM__Providers__Grok__Models__grok-code-fast-1__MaxOutputTokens=16384
-
-# Gemini Provider Configuration (Optional)
-AMQ_LLM__Providers__Gemini__Enabled=false
-AMQ_LLM__Providers__Gemini__ApiKey=your-gemini-api-key-here
-AMQ_LLM__Providers__Gemini__BaseUrl=https://generativelanguage.googleapis.com/
-AMQ_LLM__Providers__Gemini__DefaultModel=gemini-1.5-flash
-AMQ_LLM__Providers__Gemini__SafetyThreshold=BLOCK_NONE
-
-# Gemini Model Configurations
-AMQ_LLM__Providers__Gemini__Models__gemini-1.5-pro__Name=Gemini 1.5 Pro
-AMQ_LLM__Providers__Gemini__Models__gemini-1.5-pro__MaxTokens=2097152
-AMQ_LLM__Providers__Gemini__Models__gemini-1.5-pro__MaxOutputTokens=8192
-
-AMQ_LLM__Providers__Gemini__Models__gemini-1.5-flash__Name=Gemini 1.5 Flash
-AMQ_LLM__Providers__Gemini__Models__gemini-1.5-flash__MaxTokens=1048576
-AMQ_LLM__Providers__Gemini__Models__gemini-1.5-flash__MaxOutputTokens=8192
+# Gemini - optional alternative
+# AMQ_LLM__Providers__Gemini__ApiKey=your-gemini-api-key-here
 
 # ======================
-# Database Configuration
+# OPTIONAL - Database Configuration
 # ======================
-AMQ_Database__Mode=1
-# Mode 0: MySQL, Mode 1: SQLite, Mode 2: MSSQL, Mode 3: PostgreSQL
-
-# Provider-specific Connection Strings (Recommended)
-# SQLite Connection (when Mode=1)
-AMQ_ConnectionStrings__Amiquin-Sqlite=Data Source=Data/Database/amiquin.db
-
-# MySQL Connection (when Mode=0)
-# For local development:
-# AMQ_ConnectionStrings__Amiquin-Mysql=Server=localhost;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
-# For Docker Compose (use container name as server):
-# AMQ_ConnectionStrings__Amiquin-Mysql=Server=mysql;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
-
-# Legacy Connection String (for backward compatibility)
-AMQ_ConnectionStrings__AmiquinContext=Data Source=Data/Database/amiquin.db
-
-# MySQL Connection (when Mode=0)
-# For local development:
-# AMQ_ConnectionStrings__AmiquinContext=Server=localhost;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
-# For Docker Compose (use container name as server):
-# AMQ_ConnectionStrings__AmiquinContext=Server=mysql;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
+# Default: SQLite at Data/Database/amiquin.db (works out of the box)
+# Set Mode=0 for MySQL (requires connection string below)
+# AMQ_Database__Mode=0
+# AMQ_Database__ConnectionString=Server=localhost;Port=3306;Database=amiquin_db;Uid=user;Pwd=password;
 
 # ======================
-# Docker MySQL Configuration (for docker-compose)
+# OPTIONAL - Docker MySQL (when using --profile dev/prod)
 # ======================
-AMQ_BOT_NAME=amiquin-instance
-AMQ_DATABASE_MODE=0
-AMQ_DB_ROOT_PASSWORD=your-secure-root-password-here
-AMQ_DB_NAME=amiquin_db
-AMQ_DB_USER=amiquin_user
-AMQ_DB_USER_PASSWORD=your-secure-user-password-here
-
-# MySQL Connection String for Docker Compose
-AMQ_ConnectionStrings__Amiquin-Mysql="Server=localhost;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;"
+# These are only needed when using MySQL with docker-compose
+# AMQ_DB_ROOT_PASSWORD=your-secure-root-password
+# AMQ_DB_NAME=amiquin_db
+# AMQ_DB_USER=amiquin_user
+# AMQ_DB_USER_PASSWORD=your-secure-user-password
 
 # ======================
-# Data Paths Configuration
+# OPTIONAL - Memory System (Qdrant)
 # ======================
-AMQ_DataPaths__Logs=Data/Logs
-AMQ_DataPaths__Messages=Data/Messages
-AMQ_DataPaths__Sessions=Data/Sessions
-AMQ_DataPaths__Plugins=Data/Plugins
-AMQ_DataPaths__Configuration=Configuration
+# Memory is disabled by default. Enable it for conversation memory features.
+# AMQ_Memory__Enabled=true
+# AMQ_Memory__Qdrant__Host=localhost
+# AMQ_Memory__Qdrant__Port=6334
 
 # ======================
-# Memory & Vector Database Configuration
+# OPTIONAL - Voice/TTS
 # ======================
-
-# Memory System Settings
-AMQ_Memory__Enabled=true
-AMQ_Memory__MaxMemoriesPerSession=1000
-AMQ_Memory__MaxContextMemories=10
-AMQ_Memory__SimilarityThreshold=0.7
-AMQ_Memory__MinImportanceScore=0.3
-AMQ_Memory__MinMessagesForMemory=3
-AMQ_Memory__AutoCleanup=true
-AMQ_Memory__CleanupOlderThanDays=30
-AMQ_Memory__EmbeddingModel=text-embedding-3-small
-
-# Qdrant Vector Database Configuration
-AMQ_Memory__Qdrant__Host=localhost
-AMQ_Memory__Qdrant__Port=6334
-AMQ_Memory__Qdrant__UseHttps=false
-AMQ_Memory__Qdrant__CollectionName=amiquin_memories
-AMQ_Memory__Qdrant__VectorSize=1536
-AMQ_Memory__Qdrant__Distance=Cosine
-AMQ_Memory__Qdrant__AutoCreateCollection=true
-# AMQ_Memory__Qdrant__ApiKey=your-qdrant-api-key-here  # Optional for cloud instances
+# Voice is disabled by default. Enable for TTS features.
+# AMQ_Voice__Enabled=true
 
 # ======================
-# Qdrant Docker Configuration
+# OPTIONAL - Container/Docker Settings
 # ======================
-AMQ_QDRANT_HTTP_PORT=6333
-AMQ_QDRANT_GRPC_PORT=6334
-AMQ_QDRANT_WEB_UI_PORT=3000
-AMQ_QDRANT_LOG_LEVEL=INFO
-AMQ_QDRANT_WEB_UI_ENABLED=false
-
-# For Docker Compose - Qdrant connection
-# When running with Docker Compose, use the service name as host:
-# AMQ_Memory__Qdrant__Host=qdrant
-
-# ======================
-# Voice/TTS Configuration (Optional)
-# ======================
-AMQ_Voice__TTSModelName=en_GB-northern_english_male-medium
-AMQ_Voice__PiperCommand=/usr/local/bin/piper
-AMQ_Voice__Enabled=true
-
-
-# ======================
-# General Bot Settings
-# ======================
-AMQ_Bot__Name=Amiquin
-# AMQ_Bot__Version is now read from the assembly version, not configuration
-AMQ_Bot__PrintLogo=false
-AMQ_Bot__MessageFetchCount=40
-
-# ======================
-# Configuration File Path
-# ======================
-# Path to appsettings.json file - defaults to {AppDirectory.BaseDirectory}/Data/Configuration/appsettings.json
-# For Docker volumes, set to /app/Data/Configuration/appsettings.json
-AMQ_APPSETTINGS_PATH=/app/Data/Configuration/appsettings.json
-
-# ======================
-# Logging Configuration Overrides (Optional)
-# ======================
-AMQ_Serilog__MinimumLevel__Default=Information
-AMQ_Serilog__MinimumLevel__Override__System=Warning
-AMQ_Serilog__MinimumLevel__Override__Microsoft=Warning
-AMQ_Serilog__MinimumLevel__Override__Discord=Information
-
-# ======================
-# Docker/Production Overrides (Optional)
-# ======================
-# AMQ_DataPaths__Logs=/app/Data/Logs
-# AMQ_ConnectionStrings__AmiquinContext=Data Source=/app/Data/amiquin.db
+AMQ_BOT_NAME=amiquin
+# AMQ_BOT_PORT=10001
+# ASPNETCORE_ENVIRONMENT=Production
