feat: Add web search configuration options and functionality
- Introduced web search feature with options for DuckDuckGo, Google, and Bing.
- Added configuration prompts for enabling web search and entering API keys.
- Updated setup script to include web search settings in the configuration file.

fix: Enhance nuke command response handling

- Added ephemeral response attribute to the nuke command.
- Improved error handling for message deletion and response modification.
- Updated response messages to provide clearer feedback to users.

feat: Implement import configuration command

- Added a new command to import server configuration from JSON.
- Created a modal for users to paste configuration JSON and handle submissions.
- Processed imported settings and toggles, applying them to the server configuration.

refactor: Update color information display format

- Changed the display format for color information to use bold text for hex values.

chore: Update example configuration for new models and providers

- Changed default model for AI configuration from "grok-3" to "grok-beta".
- Updated embedding provider from "openai" to "ollama" with new settings.
- Adjusted vector size for memory configuration to match new embedding model.

feat: Add memory storage functionality in ReAct actions

- Implemented a new action to store important information in long-term memory.
- Added logic to determine memory type based on content.

--- a/.env.example
+++ b/.env.example
@@ -12,22 +12,30 @@ AMQ_Discord__Token=your-discord-bot-token-here
 # ======================
 # REQUIRED - LLM Provider (at least one)
 # ======================
+# Choose your default provider (OpenAI, Grok, or Gemini)
+# AMQ_LLM__DefaultProvider=OpenAI
+
 # OpenAI (recommended)
 AMQ_LLM__Providers__OpenAI__ApiKey=sk-your-openai-api-key-here
 
-# Grok (xAI) - optional alternative
+# Grok (xAI) - alternative with reasoning capabilities
 # AMQ_LLM__Providers__Grok__ApiKey=xai-your-grok-api-key-here
 
-# Gemini - optional alternative
+# Gemini - Google's AI alternative
 # AMQ_LLM__Providers__Gemini__ApiKey=your-gemini-api-key-here
 
 # ======================
 # OPTIONAL - Database Configuration
 # ======================
 # Default: SQLite at Data/Database/amiquin.db (works out of the box)
-# Set Mode=0 for MySQL (requires connection string below)
+# For MySQL: Set Mode=0 and provide connection string
 # AMQ_Database__Mode=0
-# AMQ_Database__ConnectionString=Server=localhost;Port=3306;Database=amiquin_db;Uid=user;Pwd=password;
+
+# For Docker Compose (use service name 'mysql'):
+# AMQ_Database__ConnectionString=Server=mysql;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=your-password;SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
+
+# For local MySQL (outside Docker, use 'localhost'):
+# AMQ_Database__ConnectionString=Server=localhost;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=your-password;Pooling=True;
 
 # ======================
 # OPTIONAL - Docker MySQL (when using --profile dev/prod)
@@ -43,8 +51,44 @@ AMQ_LLM__Providers__OpenAI__ApiKey=sk-your-openai-api-key-here
 # ======================
 # Memory is disabled by default. Enable it for conversation memory features.
 # AMQ_Memory__Enabled=true
+
+# For Docker Compose (use service name 'qdrant'):
+# AMQ_Memory__Qdrant__Host=qdrant
+# AMQ_Memory__Qdrant__Port=6334
+
+# For local Qdrant (outside Docker, use 'localhost'):
 # AMQ_Memory__Qdrant__Host=localhost
 # AMQ_Memory__Qdrant__Port=6334
+
+# ======================
+# OPTIONAL - Embeddings (local Ollama)
+# ======================
+# To ensure production uses LOCAL embeddings (no external provider calls for embeddings),
+# set the embedding provider to Ollama.
+#
+# For Docker Compose (use service name 'ollama'):
+# AMQ_Embedding__Provider=ollama
+# AMQ_Embedding__Ollama__BaseUrl=http://ollama:11434
+# AMQ_Embedding__Ollama__Model=nomic-embed-text
+# AMQ_Embedding__Ollama__Dimension=768
+#
+# For local Ollama (outside Docker, use 'localhost'):
+# AMQ_Embedding__Provider=ollama
+# AMQ_Embedding__Ollama__BaseUrl=http://localhost:11434
+
+# ======================
+# OPTIONAL - Web Search
+# ======================
+# Web search is disabled by default. Enable for AI to look up current information.
+# Provider options: DuckDuckGo (no API key), Google (requires API key + SearchEngineId), Bing (requires API key)
+# AMQ_WebSearch__Enabled=true
+# AMQ_WebSearch__Provider=DuckDuckGo
+# AMQ_WebSearch__ApiKey=your-api-key-here              # Required for Google/Bing
+# AMQ_WebSearch__SearchEngineId=your-search-engine-id  # Required for Google only
+# AMQ_WebSearch__MaxResults=5
+# AMQ_WebSearch__TimeoutSeconds=10
+# AMQ_WebSearch__EnableCaching=true
+# AMQ_WebSearch__CacheExpirationMinutes=30
 
 # ======================
 # OPTIONAL - Voice/TTS
