--- a/source/Amiquin.Bot/Data/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Data/Configuration/appsettings.example.json
@@ -42,10 +42,10 @@
         "Enabled": false,
         "ApiKey": "xai-your-grok-api-key",
         "BaseUrl": "https://api.x.ai/v1/",
-        "DefaultModel": "grok-3",
+        "DefaultModel": "grok-beta",
         "Models": {
-          "grok-3": {
-            "Name": "Grok 3",
+          "grok-beta": {
+            "Name": "Grok Beta",
             "MaxTokens": 131072,
             "MaxOutputTokens": 8192
           }
@@ -82,12 +82,18 @@
     "Mode": 1
   },
   "Embedding": {
-    "Provider": "openai",
+    "Provider": "ollama",
     "MaxTextLength": 8000,
     "LogMetrics": false,
     "OpenAI": {
       "Model": "text-embedding-3-small",
       "Dimension": 1536
+    },
+    "Ollama": {
+      "BaseUrl": "http://localhost:11434",
+      "Model": "nomic-embed-text",
+      "Dimension": 768,
+      "TimeoutSeconds": 30
     }
   },
   "Memory": {
@@ -113,7 +119,7 @@
       "UseHttps": false,
       "ApiKey": null,
       "CollectionName": "amiquin_memories",
-      "VectorSize": 1536,
+      "VectorSize": 768,
       "Distance": "Cosine",
       "AutoCreateCollection": true
     }
